--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
 }
 
@@ -11,8 +11,17 @@
   -webkit-border-radius: 4px;
   border-radius: 4px;
   background: rgb(219, 219, 219);
-}
+} */
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  background-color: rgb(255, 255, 255) !important;
+  /* -webkit-text-fill-color: #d8cb86; */
+  /* -webkit-box-shadow: 0 0 0 1000px rgba(255, 255, 255, 0) inset; */
+  /* transition: background-color 5000s ease-in-out 0s; */
+}
 /*  */
 
 body {
@@ -26,14 +35,22 @@ body {
   background-color: #6c757d;
 }
 
-.login-wrap form, .signup-wrap form, .forgot-wrap form {
+.login-wrap label {
+  font-size: 14px;
+}
+
+.login-wrap form,
+.signup-wrap form,
+.forgot-wrap form {
   width: 500px;
   margin: 0px auto 0px auto;
   border: 1px solid #ced4da;
 }
 
-.form-btn-group a, .form-btn-group input {
+.form-btn-group a,
+.form-btn-group input {
   width: 80px;
+  font-size: 14px;
 }
 
 /* 後台頁 */
@@ -52,7 +69,7 @@ body {
   top: -2px;
 }
 
-.dashboard-wrap .header-icon-wrap a>i:active {
+.dashboard-wrap .header-icon-wrap a > i:active {
   transform: scale(0.95);
 }
 
@@ -99,7 +116,7 @@ body {
   }
 }
 
-.product-page-wrap>div {
+.product-page-wrap > div {
   /* 60 18 58 38 */
   height: calc(100vh - 198px);
   overflow-y: scroll;
@@ -159,8 +176,10 @@ table {
 }
 
 main table th {
+  min-width: 60px;
   max-width: 200px;
   font-size: 14px;
+  text-align: center;
 }
 
 main table td {
@@ -170,13 +189,30 @@ main table td {
   overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  text-align: center;
 }
 
 /*  */
-.modal-content{
+/* .modal-content {
   width: 500px;
 }
-.modal.show{
+.modal.show {
   display: flex !important;
   align-items: center;
+} */
+
+.location-mod-wrap form label,
+.location-mod-wrap form input,
+.location-mod-wrap form button,
+.location-mod-wrap form textarea,
+.location-mod-wrap .modal-body {
+  font-size: 14px;
+}
+.location-mod-wrap {
+  height: calc(100vh - 134px);
+  overflow-y: scroll;
+}
+
+.pagination a {
+  font-size: 14px;
 }
