--- a/css/all.css
+++ b/css/all.css
@@ -21,7 +21,9 @@ input:-webkit-autofill:active {
 body,
 button,
 input,
-textarea {
+textarea,
+option,
+select {
   letter-spacing: 0.2rem;
   overflow-x: hidden;
 }
@@ -33,7 +35,9 @@ textarea,
 a,
 td,
 th,
-.modal-body {
+.modal-body,
+option,
+select {
   font-size: 14px !important;
 }
 
@@ -132,6 +136,7 @@ th,
 .dashboard-wrap main {
   width: 100vw;
   height: calc(100vh - 60px);
+  overflow-y: scroll;
   position: absolute;
   left: 0px;
   -webkit-transition: 0.15s;
@@ -169,7 +174,7 @@ th,
 
 .location-page-wrap .table-wrap {
   overflow-y: scroll;
-  height: calc(100vh - 336.492px);
+  height: calc(100vh - 324px);
 }
 
 .location-page-wrap .table-wrap table th {
@@ -200,7 +205,7 @@ th,
 
 @media screen and (min-width: 992px) {
   .location-page-wrap .table-wrap {
-    height: calc(100vh - 285.492px);
+    height: calc(100vh - 273px);
   }
 }
 
@@ -208,5 +213,22 @@ th,
 .location-add-wrap {
   height: calc(100vh - 134px);
   overflow-y: scroll;
+}
+
+.location-map .gm-style-iw {
+  padding: 18px 0 0 18px !important;
+}
+
+.location-map button.gm-ui-hover-effect {
+  top: 0px !important;
+  right: -2px !important;
+}
+
+.location-map div[role='button']:focus {
+  outline: none !important;
+}
+
+.location-map div[role='button']:hover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=all.css.map */
