--- a/css/all.scss
+++ b/css/all.scss
@@ -99,13 +99,13 @@ select {
         padding: 12px 0 12px 0;
         &.active {
           background-color: #545b62 !important;
-          .fa-angle-down {
-            left: -3px;
+          .fa-angle-down::before {
+            transform-origin: center;
             transform: rotate(180deg);
           }
         }
-        .fa-angle-down {
-          position: relative;
+        .fa-angle-down::before {
+          width: 9.25px;
           transition: 0.3s;
         }
       }
@@ -232,10 +232,23 @@ select {
 // 據點消息頁 - 修改 / 據點消息頁 - 新增
 .location-mod-wrap,
 .location-add-wrap {
-  height: calc(100vh - 134px);
+  height: calc(100vh - 150px);
   overflow-y: scroll;
 }
 
+.add-modal-img,
+.mod-modal-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+}
+@media screen and (min-width: 576px) {
+  .add-modal-img,
+  .mod-modal-img {
+    height: auto;
+  }
+}
 // Google Map Style
 .location-map {
   .gm-style-iw {
@@ -284,6 +297,7 @@ select {
 
 .location-chart-wrap {
   width: 100%;
+  // height: calc(50% - 16px);
   canvas {
     width: 500px;
     height: 500px;
@@ -294,7 +308,11 @@ select {
   margin: auto;
   width: 90%;
   .location-list {
-    height: 300px;
+    overflow-y: scroll;
+    // height: 300px;
+  }
+  h4 {
+    font-size: 20px;
   }
 }
 
@@ -303,10 +321,13 @@ select {
     width: 60%;
   }
   .location-list-wrap {
-    width: 270px;
+    width: 230px;
     margin: 0 0 0 0;
     .location-list {
       height: 500px;
+    }
+    h4 {
+      font-size: 24px;
     }
   }
 }
@@ -314,6 +335,9 @@ select {
 @media screen and (min-width: 1200px) {
   .location-chart-wrap {
     width: 50%;
+  }
+  .location-list-wrap {
+    width: 270px;
   }
 }
 
