--- a/css/all.css
+++ b/css/all.css
@@ -1,24 +1,3 @@
-::-webkit-scrollbar {
-  width: 6.5px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background: #dbdbdb;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  background-color: white !important;
-}
-
 body,
 button,
 input,
@@ -42,15 +21,44 @@ select {
   font-size: 14px !important;
 }
 
+::-webkit-scrollbar {
+  width: 6.5px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: #dbdbdb;
+}
+
+.admin-wrap .warning-message-wrap {
+  font-size: 14px;
+}
+
+.admin-wrap .warning-message-wrap .warning-message {
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+}
+
 .admin-wrap form {
-  width: 500px;
+  width: 300px;
   margin: 0px auto 0px auto;
   border: 1px solid #ced4da;
 }
 
-.admin-wrap .form-btn-group a,
-.admin-wrap .form-btn-group input {
+.admin-wrap form .form-btn-group a,
+.admin-wrap form .form-btn-group input {
   width: 80px;
+}
+
+@media screen and (min-width: 500px) {
+  .admin-wrap form {
+    width: 400px;
+  }
 }
 
 .dashboard-wrap .header-icon-wrap {
@@ -166,6 +174,110 @@ select {
   }
 }
 
+.home-page-wrap {
+  overflow-y: scroll;
+}
+
+.home-page-wrap .location-map .gm-style-iw {
+  max-width: 280px !important;
+  padding: 18px 0 0 18px !important;
+}
+
+.home-page-wrap .location-map .gm-style-iw .gm-style-iw-d img {
+  width: 244px !important;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 8px;
+}
+
+.home-page-wrap .location-map button.gm-ui-hover-effect {
+  top: 0px !important;
+  right: -2px !important;
+}
+
+.home-page-wrap .location-map div[role='button']:focus {
+  outline: none !important;
+}
+
+.home-page-wrap .location-map div[role='button']:hover {
+  cursor: pointer;
+}
+
+.home-page-wrap .location-chart-wrap {
+  width: 100%;
+}
+
+.home-page-wrap .location-chart-wrap canvas {
+  width: 500px;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.home-page-wrap .location-list-wrap {
+  margin: auto;
+  width: 90%;
+}
+
+.home-page-wrap .location-list-wrap .location-list {
+  overflow-y: scroll;
+}
+
+.home-page-wrap .location-list-wrap h4 {
+  font-size: 20px;
+}
+
+.home-page-wrap .location-list-wrap .location-chart-title i {
+  cursor: pointer;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+}
+
+.home-page-wrap .location-list-wrap .location-chart-title i:active {
+  -webkit-transform: scale(0.97);
+          transform: scale(0.97);
+}
+
+@media screen and (min-width: 576px) {
+  .home-page-wrap .location-map .gm-style-iw {
+    max-width: 339.48px !important;
+    padding: 18px 0 0 18px !important;
+  }
+  .home-page-wrap .location-map .gm-style-iw .gm-style-iw-d img {
+    width: 303.48px !important;
+    height: 200px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    margin-bottom: 8px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .home-page-wrap .location-chart-wrap {
+    width: 60%;
+  }
+  .home-page-wrap .location-list-wrap {
+    width: 230px;
+    margin: 0 0 0 0;
+  }
+  .home-page-wrap .location-list-wrap .location-list {
+    height: 500px;
+  }
+  .home-page-wrap .location-list-wrap h4 {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .home-page-wrap .location-chart-wrap {
+    width: 50%;
+  }
+  .home-page-wrap .location-list-wrap {
+    width: 270px;
+  }
+}
+
 .location-page-wrap .location-delete-btn.delete-disabled {
   color: #fff;
   background-color: #dc3545;
@@ -217,8 +329,8 @@ select {
   overflow-y: scroll;
 }
 
-.add-modal-img,
-.mod-modal-img {
+.location-mod-wrap .mod-modal-img,
+.location-add-wrap .add-modal-img {
   width: 100%;
   height: 200px;
   -o-object-fit: cover;
@@ -228,109 +340,9 @@ select {
 }
 
 @media screen and (min-width: 576px) {
-  .add-modal-img,
-  .mod-modal-img {
+  .location-mod-wrap .mod-modal-img,
+  .location-add-wrap .add-modal-img {
     height: auto;
   }
-}
-
-.location-map .gm-style-iw {
-  max-width: 280px !important;
-  padding: 18px 0 0 18px !important;
-}
-
-.location-map .gm-style-iw .gm-style-iw-d img {
-  width: 244px !important;
-  height: 150px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  margin-bottom: 8px;
-}
-
-.location-map button.gm-ui-hover-effect {
-  top: 0px !important;
-  right: -2px !important;
-}
-
-.location-map div[role='button']:focus {
-  outline: none !important;
-}
-
-.location-map div[role='button']:hover {
-  cursor: pointer;
-}
-
-@media screen and (min-width: 576px) {
-  .location-map .gm-style-iw {
-    max-width: 339.48px !important;
-    padding: 18px 0 0 18px !important;
-  }
-  .location-map .gm-style-iw .gm-style-iw-d img {
-    width: 303.48px !important;
-    height: 200px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    margin-bottom: 8px;
-  }
-}
-
-.location-chart-wrap {
-  width: 100%;
-}
-
-.location-chart-wrap canvas {
-  width: 500px;
-  height: 500px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.location-list-wrap {
-  margin: auto;
-  width: 90%;
-}
-
-.location-list-wrap .location-list {
-  overflow-y: scroll;
-}
-
-.location-list-wrap h4 {
-  font-size: 20px;
-}
-
-@media screen and (min-width: 992px) {
-  .location-chart-wrap {
-    width: 60%;
-  }
-  .location-list-wrap {
-    width: 230px;
-    margin: 0 0 0 0;
-  }
-  .location-list-wrap .location-list {
-    height: 500px;
-  }
-  .location-list-wrap h4 {
-    font-size: 24px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .location-chart-wrap {
-    width: 50%;
-  }
-  .location-list-wrap {
-    width: 270px;
-  }
-}
-
-.location-chart-title i {
-  cursor: pointer;
-  -webkit-transition: 0.15s;
-  transition: 0.15s;
-}
-
-.location-chart-title i:active {
-  -webkit-transform: scale(0.97);
-          transform: scale(0.97);
 }
 /*# sourceMappingURL=all.css.map */
