--- a/css/all.scss
+++ b/css/all.scss
@@ -1,30 +1,3 @@
-// Scroll Bar 樣式
-::-webkit-scrollbar {
-  width: 6.5px;
-  height: 8px;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  background: rgb(219, 219, 219);
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  background-color: rgb(255, 255, 255) !important;
-  //   -webkit-text-fill-color: #d8cb86;
-  //   -webkit-box-shadow: 0 0 0 1000px rgba(255, 255, 255, 0) inset;
-  //   transition: background-color 5000s ease-in-out 0s;
-}
-
 // 全域樣式
 body,
 button,
@@ -49,18 +22,47 @@ select {
   font-size: 14px !important;
 }
 
+::-webkit-scrollbar {
+  width: 6.5px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background: rgb(219, 219, 219);
+}
+
 // 登入頁
 .admin-wrap {
+  .warning-message-wrap {
+    font-size: 14px;
+    .warning-message {
+      transition: 0.15s;
+    }
+  }
   form {
-    width: 500px;
+    width: 300px;
     margin: 0px auto 0px auto;
     border: 1px solid #ced4da;
+    .form-btn-group {
+      a,
+      input {
+        width: 80px;
+      }
+    }
   }
-  //
-  .form-btn-group {
-    a,
-    input {
-      width: 80px;
+}
+// 登入頁 RWD
+@media screen and (min-width: 500px) {
+  .admin-wrap {
+    form {
+      width: 400px;
     }
   }
 }
@@ -171,6 +173,113 @@ select {
   }
 }
 
+// 首頁
+.home-page-wrap {
+  overflow-y: scroll;
+  .location-map {
+    .gm-style-iw {
+      max-width: 280px !important;
+      padding: 18px 0 0 18px !important;
+      .gm-style-iw-d {
+        img {
+          width: 244px !important;
+          height: 150px;
+          object-fit: cover;
+          margin-bottom: 8px;
+        }
+      }
+    }
+
+    button.gm-ui-hover-effect {
+      top: 0px !important;
+      right: -2px !important;
+    }
+
+    div[role='button'] {
+      &:focus {
+        outline: none !important;
+      }
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  //
+  .location-chart-wrap {
+    width: 100%;
+    canvas {
+      width: 500px;
+      height: 500px;
+      object-fit: cover;
+    }
+  }
+  .location-list-wrap {
+    margin: auto;
+    width: 90%;
+    .location-list {
+      overflow-y: scroll;
+    }
+    h4 {
+      font-size: 20px;
+    }
+    .location-chart-title i {
+      cursor: pointer;
+      transition: 0.15s;
+      &:active {
+        transform: scale(0.97);
+      }
+    }
+  }
+}
+
+// 首頁 RWD
+@media screen and (min-width: 576px) {
+  .home-page-wrap {
+    // Google Map Style
+    .location-map {
+      .gm-style-iw {
+        max-width: 339.48px !important;
+        padding: 18px 0 0 18px !important;
+        .gm-style-iw-d {
+          img {
+            width: 303.48px !important;
+            height: 200px;
+            object-fit: cover;
+            margin-bottom: 8px;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 992px) {
+  .home-page-wrap {
+    .location-chart-wrap {
+      width: 60%;
+    }
+    .location-list-wrap {
+      width: 230px;
+      margin: 0 0 0 0;
+      .location-list {
+        height: 500px;
+      }
+      h4 {
+        font-size: 24px;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .home-page-wrap {
+    .location-chart-wrap {
+      width: 50%;
+    }
+    .location-list-wrap {
+      width: 270px;
+    }
+  }
+}
+
 // 據點消息頁
 .location-page-wrap {
   .location-delete-btn {
@@ -186,7 +295,6 @@ select {
   .table-wrap {
     overflow-y: scroll;
     height: calc(100vh - 340px);
-    // height: calc(100vh - 336.492px);
     table {
       th {
         min-width: 90px;
@@ -224,7 +332,6 @@ select {
   .location-page-wrap {
     .table-wrap {
       height: calc(100vh - 289px);
-      // height: calc(100vh - 285.492px);
     }
   }
 }
@@ -236,115 +343,17 @@ select {
   overflow-y: scroll;
 }
 
-.add-modal-img,
-.mod-modal-img {
+.location-mod-wrap .mod-modal-img,
+.location-add-wrap .add-modal-img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   object-position: center;
 }
+// 據點消息頁 - 修改 RWD / 據點消息頁 - 新增 RWD
 @media screen and (min-width: 576px) {
-  .add-modal-img,
-  .mod-modal-img {
+  .location-mod-wrap .mod-modal-img,
+  .location-add-wrap .add-modal-img {
     height: auto;
-  }
-}
-// Google Map Style
-.location-map {
-  .gm-style-iw {
-    max-width: 280px !important;
-    padding: 18px 0 0 18px !important;
-    .gm-style-iw-d {
-      img {
-        width: 244px !important;
-        height: 150px;
-        object-fit: cover;
-        margin-bottom: 8px;
-      }
-    }
-  }
-
-  button.gm-ui-hover-effect {
-    top: 0px !important;
-    right: -2px !important;
-  }
-
-  div[role='button'] {
-    &:focus {
-      outline: none !important;
-    }
-    &:hover {
-      cursor: pointer;
-    }
-  }
-}
-@media screen and (min-width: 576px) {
-  .location-map {
-    .gm-style-iw {
-      max-width: 339.48px !important;
-      padding: 18px 0 0 18px !important;
-      .gm-style-iw-d {
-        img {
-          width: 303.48px !important;
-          height: 200px;
-          object-fit: cover;
-          margin-bottom: 8px;
-        }
-      }
-    }
-  }
-}
-
-.location-chart-wrap {
-  width: 100%;
-  // height: calc(50% - 16px);
-  canvas {
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
-  }
-}
-.location-list-wrap {
-  margin: auto;
-  width: 90%;
-  .location-list {
-    overflow-y: scroll;
-    // height: 300px;
-  }
-  h4 {
-    font-size: 20px;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .location-chart-wrap {
-    width: 60%;
-  }
-  .location-list-wrap {
-    width: 230px;
-    margin: 0 0 0 0;
-    .location-list {
-      height: 500px;
-    }
-    h4 {
-      font-size: 24px;
-    }
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .location-chart-wrap {
-    width: 50%;
-  }
-  .location-list-wrap {
-    width: 270px;
-  }
-}
-
-.location-chart-title i {
-  cursor: pointer;
-  transition: 0.15s;
-  &:active {
-    transform: scale(0.97);
   }
 }
