--- a/web/css/all.scss
+++ b/web/css/all.scss
@@ -230,6 +230,9 @@ select {
       }
     }
   }
+  .member-chart-wrap {
+    width: 400px;
+  }
 }
 
 // 首頁 RWD
@@ -249,6 +252,9 @@ select {
           }
         }
       }
+    }
+    .member-chart-wrap {
+      width: 400px;
     }
   }
 }
