--- a/web/css/all.scss
+++ b/web/css/all.scss
@@ -236,6 +236,9 @@ select {
   #member-chart-year {
     font-size: 20px;
   }
+  .member-chart-detail {
+    font-size: 12px;
+  }
 }
 
 // 首頁 RWD
@@ -285,6 +288,9 @@ select {
     }
     #member-chart-year {
       font-size: 24px;
+    }
+    .member-chart-detail {
+      font-size: 14px;
     }
   }
 }
