--- a/web/css/all.scss
+++ b/web/css/all.scss
@@ -215,8 +215,8 @@ select {
   }
   .location-list-wrap {
     margin: auto;
-    // width: 95%;
-    width: 90%; // test
+    width: 95%;
+    // width: 90%; //
     .location-list {
       overflow-y: scroll;
     }
