--- a/web/css/all.scss
+++ b/web/css/all.scss
@@ -221,7 +221,7 @@ select {
     // width: 90%; //
     .location-list {
       overflow-y: scroll;
-      height: 180px;
+      min-height: 180px;
     }
     h4 {
       font-size: 20px;
@@ -254,7 +254,7 @@ select {
     .location-list-wrap {
       .location-list {
         overflow-y: scroll;
-        height: 300px;
+        // min-height: 300px;
       }
     }
   }
